# networkServer_starman

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: server_obj.h
include/linux/: server_obj.h
include/win32/: server_obj_win32.h
src/: .CMakeLists.txt  main.cpp  server_obj.cpp  testServer.cpp
src/linux/: server_obj.cpp
src/win32/: server_obj_win32.cpp
